--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lucide-react": "^0.292.0",
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "utif": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
